fix(waybar): inconsistent spacing between modules

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -115,12 +115,12 @@ tooltip {
   padding-right: 5px;
   padding-left: 5px;
   border-radius: 20px 20px 20px 20px;
-  margin-right: 20px;
 }
 
 #clock {
   color: #cdcbcb;
   margin-left: 15px;
+  margin-right: 15px;
 }
 
 #window {
@@ -129,8 +129,8 @@ tooltip {
 }
 
 #tray {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 
@@ -149,7 +149,7 @@ tooltip {
   padding-left: 15px;
   padding-right: 5px;
   border-radius: 20px 0px 0px 20px;
-  margin-left: 20px;
+  margin-left: 15px;
 }
 
 #network {
